Created CHANGELOG.txt to keep track of changes.--Peter
Created controllers package.--Peter
Moved Controller to Controllers.--Peter
Created entityInterfaces package.--Peter
Created interface classes for each Entity class in entity/Interfaces.--Peter
Created interface class for Controller.--Peter
Moved Editable, Displayable to entityInterfaces.--Peter
Added exceptions to XMLParser if duplicate names are loaded from an XML File. --Wes


TODO: //[Class]: [Method]: [Changes]
Please specify the method you made changes to under the classes name
Controllers:
    Controller:

    SingleLibraryController:

    WorkingDirectory:


Display:
    CLIDisplay:

    Displayer:

    GUIDisplay:

Entity Interfaces:
    Displayable:

    Editable:

    Entity:

    RatedRelation:

    Relation:

Entity Classes:
    Argument:

    Idea:

    Library:

    Note:

    RefArg:

    Reference:

    RefIdea:

    Theme:

    Topic:

Management:
    RefMeisterExec:


XML:
    MalformedXMLException:

    Saveable:

    XMLManager:

    XMLParser:
